Updated index.html with footer changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="img/martlogo.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> -->
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -587,7 +587,7 @@
 
             <div class="content px-xl-5" data-aos="fade-up" data-aos-delay="100">
               <h3><span>Frequently Asked </span><strong>Questions</strong></h3>
-             
+
             </div>
 
             <div class="faq-container px-xl-5" data-aos="fade-up" data-aos-delay="200">
@@ -787,8 +787,8 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="https://formsubmit.co/usama@aspirasys.com" method="POST"
-              class="php-email-form " data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formsubmit.co/usama@aspirasys.com" method="POST" class="php-email-form "
+              data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -867,8 +867,8 @@
       <!-- Newsletter Signup -->
       <div class="footer-section">
         <h3>Newsletter</h3>
-        <form>
-          <input type="email" placeholder="Enter your email" required>
+        <form action="mailto:usama@aspirasys.com" method="POST" enctype="text/plain">
+          <input type="email" name="email" placeholder="Enter your email" required>
           <button type="submit">Subscribe</button>
         </form>
       </div>
