--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
       list-style: none;
     }
 
-    .logomart img {
+    .logomart img , .logo {
       width: 230px;
       height: 68px;
+      position: relative;
+      z-index: 99;
       object-fit: cover;
     }
 
@@ -334,7 +336,7 @@
 
 
             <ul>
-              <li><span><i class="bi bi-check2-circle "></i> </span>
+              <li>
                 <p> KubraMart is a transformative initiative by Ambur Muslim
                   Education Society (AMES), committed to empowering
                   women by providing them with a dedicated platform to start and grow their own businesses.
@@ -344,14 +346,14 @@
                   featuring 10 subsidized rental spaces, offering aspiring female entrepreneurs the opportunity to build
                   sustainable businesses</p>
               </li>
-              <li><span><i class="bi bi-check2-circle "></i> </span>
+              <li>
                 <p>At KubraMart, women can establish businesses in
                   food,
                   fashion, tailoring, beauty, and other essential services, catering exclusively to female customers.
                   This initiative promotes financial independence, community growth, and skill development, ensuring
                   that women have a safe, inclusive, and supportive space to thrive and succeed.</p>
               </li>
-              <li><span><i class="bi bi-check2-circle "></i></span>
+              <li>
                 <p> Through KubraMart, AMES envisions a future where
                   women-led
                   businesses flourish, turning ambition into success and making a meaningful impact on the local
@@ -764,7 +766,8 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Kubra Women's Market
+                  Jalal Road Ambur. </p>
               </div>
             </div><!-- End Info Item -->
 
@@ -772,7 +775,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <p>+91 94433 20313</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -780,14 +783,14 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p>kubramart@gmail.com </p>
               </div>
             </div><!-- End Info Item -->
 
           </div>
 
           <div class="col-lg-8">
-            <form action="https://formsubmit.co/usama@aspirasys.com" method="POST" class="php-email-form "
+            <form action="https://formsubmit.co/kubramart@gmail.com" method="POST" class="php-email-form "
               data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
@@ -841,6 +844,7 @@
 
   <footer>
     <div class="footer-container">
+      
       <!-- Quick Links -->
       <div class="footer-section">
         <h3>Quick Links</h3>
@@ -867,7 +871,7 @@
       <!-- Newsletter Signup -->
       <div class="footer-section">
         <h3>Newsletter</h3>
-        <form action="mailto:usama@aspirasys.com" method="POST" enctype="text/plain">
+        <form action="mailto:kubramart@gmail.com" method="POST" enctype="text/plain">
           <input type="email" name="email" placeholder="Enter your email" required>
           <button type="submit">Subscribe</button>
         </form>
@@ -884,6 +888,7 @@
     </div>
 
     <div class="footer-bottom">
+    
       <p>&copy; 2025 KubraMart. All Rights Reserved.</p>
     </div>
   </footer>
