--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       list-style: none;
     }
 
-    .logomart img , .logo {
+    .logomart img {
       width: 230px;
       height: 68px;
       position: relative;
@@ -332,8 +332,6 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
-
-
 
             <ul>
               <li>
