--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="/logo.png" rel="icon">
-  <link href="img/martlogo.png" rel="apple-touch-icon">
+  <link href="/Favicon-logo.jpeg" rel="icon">
+  <link href="/Favicon-logo.jpeg" rel="apple-touch-icon">
 
   <!-- Fonts -->
 
