--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <!-- Fonts -->
 
+   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -262,8 +263,8 @@
 
     .para {
       line-height: 30px;
-      font-size: 18px;
-      width: 80%;
+      font-size: 17px;
+      width: 100%;
     }
   </style>
 
@@ -335,7 +336,7 @@
 
       <div class="container">
 
-        <div class="row gy-4 d-flex flex-column justify-content-center align-content-center ">
+        <div class="row gy-4 d-flex flex-column justify-content-center align-items-start ">
 
           <div class="col-lg-6 content para" data-aos="fade-up" data-aos-delay="100">
 
