--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Fonts -->
 
-   
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -46,10 +46,15 @@
 
     .ulli i {
       color: #b37fa3;
+
+    }
+
+    .ulli li {
+      margin-bottom: 20px;
     }
 
     .imagefaq {
-      margin-top: 18rem;
+      margin-top: 15rem;
     }
 
     .container-fluid {
@@ -281,7 +286,6 @@
           <img src="/logo.png" alt="">
         </div>
 
-        <!-- <h1 class="sitename">KubraMart</h1> -->
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -307,15 +311,15 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="overlay.jpg" alt="" data-aos="fade-in">
+      <img src="/banner.png" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center text-center">
         <h2 data-aos="fade-up" data-aos-delay="100">A Marketplace for Women, by Women.</h2>
-        <p data-aos="fade-up" data-aos-delay="200">KubraMart is dedicated to supporting and uplifting women
-          entrepreneurs by providing them with the perfect retail spaces to grow their businesses.</p>
-        <div data-aos="fade-up" data-aos-delay="300">
-          <a href="./index.html" class="glightbox pulsating-play-btn"></a>
-        </div>
+        <br>
+
+        <p data-aos="fade-up" data-aos-delay="200">Kubra Market is dedicated to supporting and uplifting women
+          entrepreneurs by providing them with the perfect <br> retail spaces to grow their businesses.</p>
+        <br>
         <div class="buttons">
           <a href="https://docs.google.com/forms/d/e/1FAIpQLSfo9UIEVpaQEb0wIPZVK91HyoW0plkZc_Guaj6pjHN1O8dt9g/viewform?usp=sharing"
             class="primary">Apply Shop</a>
@@ -331,7 +335,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>The Vision Behind KubraMart</p>
+        <p>The Vision Behind Kubra Market</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -342,7 +346,7 @@
 
             <ul class="p">
               <li>
-                <p> KubraMart is a transformative initiative by Ambur Muslim
+                <p> Kubra Market is a transformative initiative by Ambur Muslim
                   Education Society (AMES), committed to empowering
                   women by providing them with a dedicated platform to start and grow their own businesses.
                   Understanding
@@ -352,14 +356,14 @@
                   sustainable businesses</p>
               </li>
               <li>
-                <p>At KubraMart, women can establish businesses in
+                <p>At Kubra Market, women can establish businesses in
                   food,
                   fashion, tailoring, beauty, and other essential services, catering exclusively to female customers.
                   This initiative promotes financial independence, community growth, and skill development, ensuring
                   that women have a safe, inclusive, and supportive space to thrive and succeed.</p>
               </li>
               <li>
-                <p> Through KubraMart, AMES envisions a future where
+                <p> Through Kubra Market, AMES envisions a future where
                   women-led
                   businesses flourish, turning ambition into success and making a meaningful impact on the local
                   economy.</p>
@@ -370,7 +374,7 @@
           <div class="col-lg-6 para" data-aos="fade-up" data-aos-delay="200">
 
             <p>
-              By creating dedicated spaces like KubraMart, we ensure a
+              By creating dedicated spaces like Kubra Market, we ensure a
               safer, more inclusive, and empowering business environment, where women can confidently pursue their
               entrepreneurial dreams.
 
@@ -395,7 +399,7 @@
 
 
       <section class="criteria-container" id="eligibility-section">
-        <h2 class="criteria-heading">Eligibility Criteria for KubraMart</h2>
+        <h2 class="criteria-heading">Eligibility Criteria for Kubra Market</h2>
 
         <div class="criteria-box">
           <div class="icon"><i class="fa-solid fa-person-dress"></i></div>
@@ -443,7 +447,7 @@
           <div class="icon"><i class="fas fa-check-circle"></i></div>
           <div class="criteria-text">
             <div class="criteria-title">Adherence to Guidelines</div>
-            <div class="criteria-desc">All applicants must follow KubraMart’s rules and maintain a professional work
+            <div class="criteria-desc">All applicants must follow Kubra Market’s rules and maintain a professional work
               environment.</div>
           </div>
         </div>
@@ -466,8 +470,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Guidelines for KubraMart Shop Owners</h2>
-        <p>To ensure a smooth and professional environment at KubraMart, all shop owners must adhere to the following
+        <h2>Guidelines for Kubra Market Shop Owners</h2>
+        <p>To ensure a smooth and professional environment at Kubra Market, all shop owners must adhere to the following
           guidelines:
         </p>
       </div><!-- End Section Title -->
@@ -485,7 +489,8 @@
               <ul class="ulli text-start">
                 <li><i class="bi bi-check2-circle"></i> <span> Shops must be operated by women and cater exclusively to
                     women customers. </span></li>
-                <li><i class="bi bi-check2-circle"></i> <span> Business hours should align with KubraMart's operational
+                <li><i class="bi bi-check2-circle"></i> <span> Business hours should align with Kubra Market's
+                    operational
                     timings. </span></li>
                 <li><i class="bi bi-check2-circle"></i> <span> Shop owners must actively run their business and avoid
                     keeping the space idle. </span></li>
@@ -601,10 +606,11 @@
 
               <div class="faq-item faq-active">
                 <i class="faq-icon bi bi-question-circle"></i>
-                <h3>What is KubraMart?</h3>
+                <h3>What is Kubra Market?</h3>
                 <div class="faq-content">
                   <p>
-                    KubraMart is a women-exclusive shopping complex initiated by Ambur Muslim Education Society (AMES)
+                    Kubra Market is a women-exclusive shopping complex initiated by Ambur Muslim Education Society
+                    (AMES)
                     to support women entrepreneurs by providing subsidized rental shops. It serves as a dedicated
                     marketplace for women to establish and grow their businesses while catering exclusively to female
                     customers.</p>
@@ -614,7 +620,7 @@
 
               <div class="faq-item">
                 <i class="faq-icon bi bi-question-circle"></i>
-                <h3> Who can apply for a shop at KubraMart?</h3>
+                <h3> Who can apply for a shop at Kubra Market?</h3>
                 <div class="faq-content">
                   <p>Only women entrepreneurs who wish to start or expand a business in areas such as food, fashion,
                     tailoring, beauty, and other women-centric services are eligible to apply.</p>
@@ -646,7 +652,7 @@
 
               <div class="faq-item">
                 <i class="faq-icon bi bi-question-circle"></i>
-                <h3>What types of businesses are allowed in KubraMart?</h3>
+                <h3>What types of businesses are allowed in Kubra Market?</h3>
                 <div class="faq-content">
 
                   <ul class="ulli">
@@ -668,18 +674,18 @@
                 <h3> Can I run a business with a partner?</h3>
                 <div class="faq-content">
                   <p>Yes, but all partners must be women, and the shop should be operated strictly in accordance with
-                    KubraMart's guidelines.</p>
+                    Kubra Market's guidelines.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
                 <i class="faq-icon bi bi-question-circle"></i>
-                <h3> What support does KubraMart provide to women entrepreneurs?
+                <h3> What support does Kubra Market provide to women entrepreneurs?
                 </h3>
                 <div class="faq-content">
                   <ul class="ulli">
-                    <li> <span>KubraMart aims to empower women by providing:
+                    <li> <span>Kubra Market aims to empower women by providing:
                       </span></li>
 
                     <li><i class="bi bi-check2-circle"></i> <span>Affordable rental space</span></li>
@@ -719,7 +725,7 @@
 
               <div class="faq-item">
                 <i class="faq-icon bi bi-question-circle"></i>
-                <h3>How can I contact KubraMart for more details?
+                <h3>How can I contact Kubra Market for more details?
                 </h3>
                 <div class="faq-content">
 
@@ -745,9 +751,13 @@
 
           </div>
 
-          <div class="col-lg-5 order-1 order-lg-2">
+          <!-- <div class="col-lg-5 order-1 order-lg-2">
             <img src="img/img/faq.jpg" class="img-fluid imagefaq" alt="" data-aos="zoom-in" data-aos-delay="100">
+          </div> -->
+          <div class="col-lg-5 order-1 order-lg-2">
+            <img src="/faq.svg" class="img-fluid imagefaq" alt="FAQ Icon" data-aos="zoom-in" data-aos-delay="100">
           </div>
+
         </div>
 
       </div>
@@ -829,7 +839,7 @@
           </div><!-- End Contact Form -->
 
           <div class="container section-title" data-aos="fade-up">
-            <h2>Kubramart Location</h2>
+            <h2>Kubra Market Location</h2>
           </div>
           <div class="map-container">
             <iframe
@@ -895,7 +905,7 @@
 
     <div class="footer-bottom">
 
-      <p>&copy; 2025 KubraMart. All Rights Reserved.</p>
+      <p>&copy; 2025 Kubra Market. All Rights Reserved.</p>
     </div>
   </footer>
   <!-- footer end -->
