--- a/policy.html
+++ b/policy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - KubraMart</title>
+    <title>Privacy Policy - Kubra Market</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -78,9 +78,8 @@
 <body>
     <div class="container">
         <h1>Privacy Policy</h1>
-        <!-- <p><strong>Effective Date:</strong> [Insert Date]</p> -->
-        <h2>About KubraMart</h2>
-        <p>KubraMart is a transformative initiative by Ambur Muslim Education Society (AMES), committed to empowering
+        <h2>About Kubra Market</h2>
+        <p>Kubra Market is a transformative initiative by Ambur Muslim Education Society (AMES), committed to empowering
             women by providing a dedicated platform to start and grow their own businesses.</p>
 
         <h2>Who Can Apply?</h2>
@@ -92,7 +91,7 @@
             <li><strong>Financial Need & Motivation:</strong> Preference for needy women, widows, and those with a
                 strong business plan.</li>
             <li><strong>Business Plan Submission:</strong> Applicants must submit a detailed business plan.</li>
-            <li><strong>Adherence to Guidelines:</strong> All applicants must follow KubraMart’s rules and maintain a
+            <li><strong>Adherence to Guidelines:</strong> All applicants must follow Kubra Market’s rules and maintain a
                 professional work environment.</li>
             <li><strong>Required Documents:</strong> Applicants must provide valid ID proof and supporting business
                 documents.</li>
@@ -100,12 +99,12 @@
 
         <h2>Privacy and Data Protection</h2>
         <p>We value your privacy and take necessary steps to protect any personal information provided during the
-            application process. Your data will be used strictly for business purposes related to KubraMart and will not
+            application process. Your data will be used strictly for business purposes related to Kubra Market and will not
             be shared with third parties without consent.</p>
 
 
         <div class="footer">
-            &copy; 2025 KubraMart. All Rights Reserved.
+            &copy; 2025 Kubra Market. All Rights Reserved.
         </div>
     </div>
 </body>
