--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - KubraMart</title>
+    <title>Terms of Service - Kubra Market</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -76,7 +76,7 @@
     <div class="container">
         <h1>Terms of Service</h1>
         <h2>Introduction</h2>
-        <p>KubraMart is a transformative initiative by Ambur Muslim Education Society (AMES), dedicated to empowering
+        <p>Kubra Market is a transformative initiative by Ambur Muslim Education Society (AMES), dedicated to empowering
             women by providing a platform to start and grow businesses.</p>
 
         <h2>Eligibility</h2>
@@ -92,7 +92,7 @@
         <h2>Application Process</h2>
         <ul>
             <li><strong>Business Plan Submission:</strong> Applicants must submit a detailed business plan.</li>
-            <li><strong>Adherence to Guidelines:</strong> All applicants must follow KubraMart’s rules and maintain a
+            <li><strong>Adherence to Guidelines:</strong> All applicants must follow Kubra Market’s rules and maintain a
                 professional work environment.</li>
             <li><strong>Required Documents:</strong> Applicants must provide valid ID proof and supporting business
                 documents.</li>
@@ -100,18 +100,20 @@
 
         <h2>Privacy and Data Protection</h2>
         <p>We value your privacy and take necessary steps to protect any personal information provided during the
-            application process. Your data will be used strictly for business purposes related to KubraMart and will not
+            application process. Your data will be used strictly for business purposes related to Kubra Market and will not
             be shared with third parties without consent.</p>
 
         <h2>Modifications to Terms</h2>
-        <p>KubraMart reserves the right to update or modify these terms at any time. Changes will be communicated
+        <p>Kubra Market reserves the right to update or modify these terms at any time. Changes will be communicated
             accordingly.</p>
 
         <h2>Contact Us</h2>
-        <p>If you have any questions about our Terms of Service, please contact us at [Insert Contact Information].</p>
+        <p>If you have any questions about our Terms of Service:-<br>📍Visit Us: Kubra Women's Market Jalal Road Ambur. <br>
+            📞 Call Us: +91 94433 20313 <br>
+            📧 Email: kubramart@gmail.com.</p>
 
         <div class="footer">
-            &copy; 2025 KubraMart. All Rights Reserved.
+            &copy; 2025 Kubra Market. All Rights Reserved.
         </div>
     </div>
 </body>
