--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>KubraMart</title>
+  <title>Kubra Market</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="/Favicon-logo.jpeg" rel="icon">
-  <link href="/Favicon-logo.jpeg" rel="apple-touch-icon">
+  <link href="/ICON.png" rel="icon">
+  <link href="/ICON.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
 
@@ -37,8 +37,8 @@
     }
 
     .logomart img {
-      width: 230px;
-      height: 68px;
+      width: 190px;
+      height: 58px;
       position: relative;
       z-index: 99;
       object-fit: cover;
@@ -283,7 +283,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <div class="logomart">
-          <img src="/logo.png" alt="">
+          <img src="/kubra market.png" alt="">
         </div>
 
       </a>
