--- a/index.html
+++ b/index.html
@@ -299,6 +299,12 @@
       margin-bottom: 20px;
 
     }
+
+    @media screen and (max-width: 361px) {
+      .hide-btn {
+        display: none;
+      }
+    }
   </style>
 
 </head>
@@ -333,7 +339,7 @@
         Rent
       </a>  -->
 
-      <a class="cta-btn" href="/qrpage.html">Pay
+      <a class="cta-btn hide-btn" href="/qrpage.html">Pay
         Rent
       </a>
 
@@ -345,7 +351,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="/hero.jpg" alt="" data-aos="fade-in">
+      <img src="/market.jpg" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center text-center">
         <h2 data-aos="fade-up" data-aos-delay="100">A Marketplace for Women, by Women.</h2>
@@ -480,7 +486,7 @@
               </div>
               <div class="content">
                 <p>Cleaning and household essentials, including buckets, mops, brooms, mats, door mats, phenyl,
-                  container boxes, jugs, water bottles, and more.</p>
+                  and more.</p>
               </div>
 
               <div class="icons d-flex justify-content-evenly">
@@ -511,7 +517,7 @@
 
               </div>
               <div class="content">
-                <p>Modest wear and accessories, including burqas, hijabs, slippers, and fancy items.</p>
+                <p>Modest wear and accessories, including burqas, hijabs, slippers, and fancy jewelry and items.</p>
               </div>
 
               <div class="icons d-flex justify-content-evenly">
@@ -567,11 +573,12 @@
               <div class="now">
                 <h3 class="mb-3">Food Court</h3>
                 <h5>Shop Owner - Lorem, ipsum</h5>
-                <p>Lorem ipsum dolor sit amet</p>
+                <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
 
               </div>
               <div class="content">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero sunt autem quisquam.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero sunt autem quisquam Lorem ipsum, dolor
+                  sit amet consectetur adipisicing elit. Autem qui voluptate suscipit..</p>
               </div>
 
               <div class="icons d-flex justify-content-evenly">
@@ -692,8 +699,8 @@
 
               </div>
               <div class="content">
-                <p>Girls and Boys brings trendy and comfy clothing for kids (0-15), from ethnic to nightwear. Our
-                  women's collection features stylish outerwear and premium undergarments for every occasion.
+                <p>Girls and Boys brings trendy and comfy clothing for kids, from ethnic to nightwear. Our
+                  women's collection features outerwear for every occasion.
                 </p>
               </div>
 
