--- a/index.html
+++ b/index.html
@@ -334,11 +334,6 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <!-- <a class="cta-btn"
-        href="https://docs.google.com/forms/d/e/1FAIpQLSfo9UIEVpaQEb0wIPZVK91HyoW0plkZc_Guaj6pjHN1O8dt9g/viewform?usp=sharing">Pay
-        Rent
-      </a>  -->
-
       <a class="cta-btn hide-btn" href="/qrpage.html">Pay
         Rent
       </a>
@@ -361,8 +356,6 @@
           entrepreneurs by providing them with the perfect <br> retail spaces to grow their businesses.</p>
         <br>
         <div class="buttons">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSfo9UIEVpaQEb0wIPZVK91HyoW0plkZc_Guaj6pjHN1O8dt9g/viewform?usp=sharing"
-            class="primary">Apply Shop</a>
           <a href="#services" class="secondary">Explore</a>
         </div>
       </div>
@@ -448,15 +441,13 @@
                 <img src="/thaibah.jpg" alt="" srcset="">
               </div>
               <div class="now">
-                <h3 class="mb-3">Thaibah Enterprises</h3>
-                <h5>Shop Owner - Seemin Shakir</h5>
-                <p>Crockery,Hajj-Umrah kit,Dubai Abayas</p>
-
+                <h3>THAIBAH ENTERPRISES</h3>
+                <h5>Crockery, Hajj-Umrah kit, Dubai Abayas</h5>
+                <h6>Shop Owner - Seemin Shakir</h6>
               </div>
               <div class="content">
-                <p>We sell imported crockery with top notch quality,
-                  additionally we have hajj/umrah
-                  kit , dubai abayas and nighties.</p>
+                <p>We Offer Premium Imported Crockery Along with High-Quality Hajj-Umrah Kits, Dubai Abayas and
+                  Nightwear.</p>
               </div>
 
               <div class="icons d-flex justify-content-evenly">
@@ -479,14 +470,13 @@
                 <img src="/minha.jpg" alt="" srcset="">
               </div>
               <div class="now">
-                <h3 class="mb-3">Minha Zainab Enterprises</h3>
-                <h5>Shop Owner - Shariba kouser</h5>
-                <p>Home utilities</p>
-
+                <h3>MINHA ZAINAB ENTERPRISES</h3>
+                <h5>Home Utilities</h5>
+                <h6>Shop Owner - Shariba kouser</h6>
               </div>
               <div class="content">
-                <p>Cleaning and household essentials, including buckets, mops, brooms, mats, door mats, phenyl,
-                  and more.</p>
+                <p>We Provide a Wide Range of Cleaning and Household Essentials, Including Buckets, Mops, Brooms, Mats
+                  and More.</p>
               </div>
 
               <div class="icons d-flex justify-content-evenly">
@@ -511,13 +501,14 @@
               </div>
 
               <div class="now">
-                <h3 class="mb-3">Haya Boutique</h3>
-                <h5>Shop Owner - Sufiya naaz</h5>
-                <p> Bhurqa,Hijab,Slippers.</p>
-
+                <h3>HAYA BOUTIQUE</h3>
+                <h5>Bhurqa, Hijab, Slippers</h5>
+                <h6>Shop Owner - Sufiya naaz</h6>
               </div>
               <div class="content">
-                <p>Modest wear and accessories, including burqas, hijabs, slippers, and fancy jewelry and items.</p>
+                <p>We Offer a Curated Selection of Modest Wear and Stylish Accessories, Including Burqas, Hijabs,
+                  Slippers and
+                  Elegant Jewelry.</p>
               </div>
 
               <div class="icons d-flex justify-content-evenly">
@@ -541,14 +532,13 @@
                 <img src="/crescent.jpg" alt="" srcset="">
               </div>
               <div class="now">
-                <h3 class="mb-3">Crescent Fashion</h3>
-                <h5>Shop Owner - Shereen Afshan</h5>
-                <p>Home Decor,Cosmetics,Imported laces, Accessories,Clothing</p>
-
+                <h3>CRESCENT FASHION</h3>
+                <h5>Home Decor, Cosmetics, Imported laces, Clothing</h5>
+                <h6>Shop Owner - Shereen Afshan</h6>
               </div>
               <div class="content">
-                <p>A collection of home décor, imported laces, imitation jewelry, accessories, innerwear, nightwear,
-                  cosmetics, handbags, organic products, and clothing.</p>
+                <p>We Offer a Diverse Collection of Home Decor, Imported laces, Imitation Jewelry, Accessories,
+                  Innerwear, Nightwear, Cosmetics, Handbags, Organic products and Clothing.</p>
               </div>
 
               <div class="icons d-flex justify-content-evenly">
@@ -571,10 +561,9 @@
                 <img src="/food.jpg" alt="" srcset="">
               </div>
               <div class="now">
-                <h3 class="mb-3">Food Court</h3>
-                <h5>Shop Owner - Lorem, ipsum</h5>
-                <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
-
+                <h3>FOOD COURT</h3>
+                <h5>Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</h5>
+                <h6>Shop Owner - Lorem, ipsum</h6>
               </div>
               <div class="content">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero sunt autem quisquam Lorem ipsum, dolor
@@ -601,14 +590,13 @@
                 <img src="/ayisha.jpg" alt="" srcset="">
               </div>
               <div class="now">
-                <h3 class="mb-3">Ayisha Silk House</h3>
-                <h5>Shop Owner - NAZIMA TABASSUM</h5>
-                <p>Clothing,Fashion outlet,Boutique,Apparel </p>
-
+                <h3>AYISHA SILK HOUSE</h3>
+                <h5>Clothing, Fashion Outlet, Boutique, Apparel</h5>
+                <h6>Shop Owner - Nazima Tabassum</h6>
               </div>
               <div class="content">
-                <p>Ayisha Silk House has offered stylish and authentic daily, party, and ethnic wear since 2005. We
-                  provide quality clothing at affordable prices with unique, limited-edition exclusives.</p>
+                <p>Ayisha Silk House has been Offering Stylish and Authentic Daily, Party and Ethnic Wear Since 2005.
+                  We Provide High-Quality Clothing at Affordable Prices, Featuring Unique Designs.</p>
               </div>
 
               <div class="icons d-flex justify-content-evenly">
@@ -633,14 +621,13 @@
               </div>
 
               <div class="now">
-                <h3 class="mb-3">Todlerry</h3>
-                <h5>Shop Owner - Naseema S</h5>
-                <p>Fashion, Kids Fashion, Clothing, Accessories, Baby care</p>
-
+                <h3>TODLERRY</h3>
+                <h5>Fashion, Kids Fashion, Clothing, Accessories, Baby Care</h5>
+                <h6>Shop Owner - Naseema S</h6>
               </div>
               <div class="content">
-                <p>Todlerry offers trendy, soft, and stylish cotton outfits for newborns to 8-year-olds, ensuring
-                  comfort and charm with a vibrant range from rompers to dungarees.</p>
+                <p>Todlerry Offers Trendy, Soft and Stylish Cotton Outfits for Newborns to 8-year-olds, Ensuring
+                  Comfort and Charm with a Vibrant Selection from Rompers to Dungarees.</p>
               </div>
 
               <div class="icons d-flex justify-content-evenly">
@@ -663,14 +650,14 @@
               </div>
 
               <div class="now">
-                <h3 class="mb-3">Al-Aiman Creation</h3>
-                <h5>Shop Owner - Saadath Shaheen</h5>
-                <p>Packing materials and traditional food</p>
-
+                <h3>AL-AIMAN CREATION</h3>
+                <h5>Packing Materials, Traditional Food</h5>
+                <h6>Shop Owner - Saadath Shaheen</h6>
               </div>
               <div class="content">
-                <p>All types of packing materials for engagement,Birthday and wedding functions and also order for
-                  traditional food.</p>
+                <p>We Provide all Types of Premium Packing Materials for Engagements, Birthdays and Wedding Functions,
+                  along with Customized Orders for Delicious Traditional Food.</p>
+
               </div>
 
               <div class="icons d-flex justify-content-evenly">
@@ -693,14 +680,14 @@
               </div>
 
               <div class="now">
-                <h3 class="mb-3">Girl's & Boy's</h3>
-                <h5>Shop Owner - Shaziya kouser</h5>
-                <p>Boutique specializing in Girls’ and Boys’ Apparel</p>
+                <h3>GIRL'S & BOY'S</h3>
+                <h5>Boutique Specializing in Girls’ and Boys’ Apparel</h5>
+                <h6>Shop Owner - Shaziya kouser</h6>
 
               </div>
               <div class="content">
-                <p>Girls and Boys brings trendy and comfy clothing for kids, from ethnic to nightwear. Our
-                  women's collection features outerwear for every occasion.
+                <p>Girls and Boys Offers Trendy and Comfortable Clothing for Kids from Ethnic wear to Nightwear. Our
+                  Women's Collection Includes Stylish Outerwear for Every Occasion.
                 </p>
               </div>
 
@@ -1199,6 +1186,7 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Explore</a></li>
+          <li><a href="#guidelines">Guidelines</a></li>
           <li><a href="#faq">FAQ</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
